--- a/src/main/resources/templates/listadoC.html
+++ b/src/main/resources/templates/listadoC.html
@@ -21,7 +21,7 @@
             <th th:text="${contribuyente.apellido}"/>
             <th th:text="${contribuyente.nit}"/>
             <th th:text="${contribuyente.importancia.codigoImportancia}"/>
-            <th th:text="${#dates.format(contribuyente.date, 'dd-MMM-yyyy')}"/>
+            <th th:text="${#dates.format(contribuyente.fechaIngreso, 'dd-MMM-yyyy')}"/>
         </tr>
     </th:block>
 </table>
